# scampy

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  README.rst  meson.build  meson_options.txt  mkdocs.yml  pypi.rst  pyproject.toml  readme.md  readme.rst  scampy_environment.yml  setup.py
.github/workflows/: main.yml  test_install_macos.yml  test_install_ubuntu.yml
c++/cosmology/include/: cosmological_model.h  power_spectrum.h
c++/cosmology/src/: cosmological_model.cpp  power_spectrum.cpp
c++/interpolator/include/: interpolation.h
c++/interpolator/include/interp/: ibstree_interface.h
c++/utilities/include/: clustering_core.h  utilities.h
c++/utilities/src/: clustering_core.cpp
cosmology/: meson.build
cosmology/include/: cosmo_c_interface.h  cosmology.h  cosmology_interface.h
cosmology/src/: cosmo_c_interface.cpp  cosmology.cpp  cosmology_interface.cpp  luminosity_function.cpp
doc/: catalogues.rst  conf.py  doxyfile.in  index.rst  meson.build  python_docs.rst  requirements.txt  tutorials.rst
doc/cpp/: meson.build
doc/sphinx/: meson.build
doc/sphinx/source/: conf.py  conf.py.in  cpp_doc.rst  cpp_index.rst  examples.rst  index.rst  meson.build  python_doc.rst
doc/sphinx/source/tutorials/: scampy_quickstart.rst
doc/tutorials/: scampy_quickstart.rst
docs/source/: conf.py  index.rst
examples/: scampy_quickstart.ipynb
examples/input/: subhalo_tab.0  subhalo_tab.1  subhalo_tab.10  subhalo_tab.100  subhalo_tab.101  subhalo_tab.102  subhalo_tab.103  subhalo_tab.104  subhalo_tab.105  subhalo_tab.106  subhalo_tab.107  subhalo_tab.108  subhalo_tab.109  subhalo_tab.11  subhalo_tab.110  subhalo_tab.111  subhalo_tab.112  subhalo_tab.113  subhalo_tab.114  subhalo_tab.115  subhalo_tab.116  subhalo_tab.117  subhalo_tab.118  subhalo_tab.119  subhalo_tab.12  subhalo_tab.120  subhalo_tab.121  subhalo_tab.122  subhalo_tab.123  subhalo_tab.124  subhalo_tab.125  subhalo_tab.126  subhalo_tab.127  subhalo_tab.13  subhalo_tab.14  subhalo_tab.15  subhalo_tab.16  subhalo_tab.17  subhalo_tab.18  subhalo_tab.19  (+88 more)
fftlog_wrap/: meson.build
fftlog_wrap/include/: abel_transform.h  fftlog_handler.h
fftlog_wrap/src/: fftlog_handler.cpp
halo_model/: meson.build
halo_model/include/: cross_halo_model.h  cross_halo_model_c_interface.h  halo_model.h  halo_model_c_interface.h  harikane16_p.h  occupation_c_interface.h  occupation_p.h  tinker10_p.h
halo_model/src/: cross_halo_model.cpp  cross_halo_model_c_interface.cpp  halo_model.cpp  halo_model_c_interface.cpp  harikane16_p.cpp  occupation_c_interface.cpp  occupation_p.cpp  tinker10_p.cpp
interpolator/: meson.build
interpolator/include/: gsl_interpolation_interface.h  interpolation.h  interpolation_c_interface.h  interpolation_interface.h
interpolator/src/: interpolation.cpp  interpolation_c_interface.cpp
pybind11/: pyb11_clustering_core.cpp  pyb11_cosmology.cpp  pyb11_interpolation.cpp
python/: cosmology.py.in  cwrap-fb0.py.in  cwrap-fb1.py.in  cwrap.py.in  halo_model.py.in  interpolator.py.in  meson.build  occupation_p.py.in
python/mockpy/: __init__.py  abundance_matching.py  catalogue.py  objects.py
python/scampy/: abundance_matching.py  catalogue.py  cosmology.py  gadget_file.py  halo_model.py  interpolator.py  objects.py  occupation_p.py
python/scampy/cwrap/: __init__.py
scampy/: __init__.py  boxes.py  catalogue.py  halo_density_profile.py  hod.py  lightcone.py  power_spectrum.py  sham.py
scampy/halo/: __init__.py  bias.py  density_profile.py  mass_function.py  model.py
scampy/io/: __init__.py  subfind_table.py
scampy/measure/: __init__.py  abundances.py  clustering.py
scampy/plot/: __init__.py
scampy/utilities/: __init__.py  base_classes.py  constants.py  fft.py  functions.py
subprojects/: fftlog.wrap
subprojects/fftlog/: meson.build
tests/: meson.build
tests/integration/: test_cosmo_c_wrap.c  test_halo_model.cpp  test_hm_c_wrap.c  test_occupation_p.cpp
tests/unit/: meson.build  test_cosmology.cpp  test_halo_model.cpp  test_hm_c_wrap.c  test_interpolator.cpp  test_occupation_p.cpp
utilities/: meson.build
utilities/include/: bit_manipulator.h  error_handling.h  utilities.h
utilities/src/: bit_manipulator.cpp  utilities.cpp
